--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,6 @@
   "minimum-stability": "stable",
   "require-dev": {
     "mockery/mockery": "^1.3",
-    "phpunit/phpunit": "^9.0"
+    "phpunit/phpunit": "^8.4 || ^9.0"
   }
 }
