--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,4 @@ jobs:
         run: vendor/bin/phpunit tests/ --coverage-clover=coverage.clover --verbose
 
       - name: Upload coverage to scrutinizer
-        run:
-          - wget https://scrutinizer-ci.com/ocular.phar
-          - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+        run: wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover
